Fixed misaligned decoration grid on intrmdt sizes, mvd decorations

--- a/main.css
+++ b/main.css
@@ -99,83 +99,83 @@ body {
     width: 500px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(20, 1fr);
+    grid-template-rows: repeat(12, 1fr);
     z-index: 10;
     position: absolute;
     top: 0;
-    left: 0; 
-    right: 0; 
-    /*margin-left: auto;
-    margin-right: auto;*/
+    left: calc(50% - 250px);
 }
 #decoration-1 {
-    grid-row: 3;
-    grid-column: 2;
-}
-#decoration-2 {
-    grid-row: 4;
-    grid-column: 4;
-}
-#decoration-3 {
     grid-row: 2;
     grid-column: 3;
 }
-#decoration-4 {
-    grid-row: 6;
+#decoration-2 {
+    grid-row: 3;
     grid-column: 2;
+    transform: rotate(-10deg);
+}
+#decoration-3 {
+    grid-row: 3;
+    grid-column: 4;
+}
+#decoration-4 {
+    grid-row: 4;
+    grid-column: 3;
 }
 #decoration-5 {
-    grid-row: 7;
-    grid-column: 4;
+    grid-row: 5;
+    grid-column: 2;
 }
 #decoration-6 {
     grid-row: 5;
-    grid-column: 3;
+    grid-column: 4;
+    transform: rotate(-15deg);
 }
 #decoration-7 {
-    grid-row: 8;
+    grid-row: 6;
     grid-column: 2;
 }
 #decoration-8 {
-    grid-row: 8;
-    grid-column: 3;
+    grid-row: 6;
+    grid-column: 4;
 }
 #decoration-9 {
+    grid-row: 7;
+    grid-column: 1;
+}
+#decoration-10 {
+    grid-row: 7;
+    grid-column: 3;
+}
+#decoration-11 {
+    grid-row: 7;
+    grid-column: 4;
+    padding-left: 20px;
+}
+#decoration-12 {
+    grid-row: 8;
+    grid-column: 2;
+}
+#decoration-13 {
     grid-row: 8;
     grid-column: 4;
 }
-#decoration-10 {
-    grid-row: 9;
-    grid-column: 2;
-}
-#decoration-11 {
-    grid-row: 9;
-    grid-column: 3;
-}
-#decoration-12 {
-    grid-row: 9;
-    grid-column: 4;
-}
-#decoration-13 {
-    grid-row: 10;
-    grid-column: 2;
-}
 #decoration-14 {
-    grid-row: 10;
-    grid-column: 3;
+    grid-row: 9;
+    grid-column: 1;
 }
 #decoration-15 {
-    grid-row: 10;
-    grid-column: 4;
+    grid-row: 9;
+    grid-column: 3;
     border-radius: 20px;
 }
 #decoration-16 {
-    grid-row: 11;
+    grid-row: 10;
     grid-column: 2;
 }
 #decoration-17 {
     grid-row: 11;
-    grid-column: 3;
+    grid-column: 4;
     border-radius: 20px;
     transform: rotate(10deg);
 }
@@ -256,6 +256,10 @@ body {
         margin-left: 25px;
         grid-column: 1;
     }
+    #tree-decorations {
+        left: 0; 
+        right: 0; 
+    }
     .modal { display: none !important; }
     .lrg-scr-card-wrapper {
         display: block !important;
@@ -266,6 +270,7 @@ body {
         position: -webkit-sticky; /* Safari */
         position: sticky;
         top: 10px;   
+        /* z-index: 10; */
     }
     .lrg-scr-credits {
         bottom:10px;
